# Intro2DGame

./: .gitignore  CMakeLists.txt  CMakePresets.json  assets.txt  main.cpp  vcpkg.json
Animation/: Animation.hpp
Assets/: Assets.hpp
ECS/: Components.hpp  Entity.hpp  EntityManager.hpp
Engine/: Engine.cpp  Engine.h  GameEngine.hpp
Input/: Action.hpp
Physics/: Physics.hpp
Scene/: Scene.cpp  Scene.h  SceneMenu.cpp  SceneMenu.h  ScenePlay.cpp  ScenePlay.h  Scene_Menu.cpp  Scene_Menu.h  Scene_Play.cpp  Scene_Play.h
Vector/: Vec2.hpp
